deploy/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkmate-svc
  namespace: checkmate
spec:
  selector:
    app: checkmate
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
