deploy/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkmate-ingress
  namespace: checkmate
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: api.checkmate.it.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: checkmate-svc
            port:
              number: 80
